bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value abs
  if (abs(n)>=90){
      ^NearHundred:3: error: not found: value abs
    if (abs(n)<=110){
        ^NearHundred:7: error: not found: value abs
      if (abs(n)>=190){
          ^NearHundred:8: error: not found: value abs
        if (abs(n)<=210){
            ^NearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (abs(n)>=90){
  ^