bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (abs(n)>=90){
    if (abs(n)<=110){
      return true
    }
    else {
      if (abs(n)>=190){
        if (abs(n)<=210){
          return true
        }
        else {
          return false
        }
      }
      else {
        return false
      }
    }
  }
}